<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_a_score_view">0</string>
    <string name="_3_points_A">+ 3 points</string>
    <string name="_2_points_A">+ 2 points</string>
    <string name="free_points_A">free points</string>
    <string name="team_b">Team B</string>
    <string name="team_b_score_view">0</string>
    <string name="_3_points_b">+ 3 points</string>
    <string name="_2_points_b">+ 2 points</string>
    <string name="free_points_b">free points</string>
    <string name="reset">reset</string>
</resources>
